# vat-mini

./: .gitignore  Makefile  README.md  pyproject.toml  security_best_practices_report.md
configs/: posttrain.yaml  pretrain.yaml  robomimic-can.yaml  smoke.yaml  tiny.yaml
docs/: TODO.md  architecture.md  datasets-and-transfer.md  sim-rollout.md  vat-mini-architecture-notes.md  vat-mini-code-guide.md  vision-action-transformer-notes.md
learning-site/: index.html  package-lock.json  package.json
learning-site/src/: App.tsx  ArchitecturePage.tsx  EditorialToc.tsx  architecture.css  editorial-toc.css  main.tsx  styles.css
src/vat_mini/: __init__.py  checkpoint.py  cli.py  config.py  data.py  device.py  evaluation.py  model.py  objectives.py  robomimic_rollout.py  tracking.py  trainer.py
tests/: test_checkpoint.py  test_config.py  test_data.py  test_model.py  test_objectives.py  test_tracking.py  test_training.py
